# OpenVINO_yolov8

./: README.md  common.hpp
CppQt_OpenVINO202203_YOLOv8_Image_Classification/: CppQt_OpenVINO202203_YOLOv8_Image_Classification.pro  Makefile  Makefile.Debug  Makefile.Release  main.cpp
CppQt_OpenVINO202203_YOLOv8_Image_Classification/.qtc_clangd/: compile_commands.json
CppQt_OpenVINO202203_YOLOv8_Image_Classification/.qtc_clangd/.cache/clangd/index/: MnistUbyte.cpp.11516125BA5975D9.idx  MnistUbyte.h.7D0095A4D1E1FEC7.idx  __stddef_max_align_t.h.397B3F9B755F34A5.idx  algorithm.2406AE3848B8D837.idx  aligned_buffer.hpp.8123FCE9777FEE6A.idx  any.hpp.EA16774ADB6DD175.idx  apiset.h.189363114E894F5F.idx  (+199 more)
CppQt_OpenVINO202203_YOLOv8_Image_Detection/: Makefile  Makefile.Debug  Makefile.Release  main.cpp
CppQt_OpenVINO202203_YOLOv8_Image_Detection/.qtc_clangd/: compile_commands.json
CppQt_OpenVINO202203_YOLOv8_Image_Segmentation/: .qmake.stash  CppQt_OpenVINO202203_YOLOv8_Image_Segmentation.pro  Makefile  Makefile.Debug  Makefile.Release  main.cpp
CppQt_OpenVINO202203_YOLOv8_Image_Segmentation/.qtc_clangd/: compile_commands.json
CppQt_OpenVINO_YOLOv8_Image_Classification/: CMakeLists.txt  CppQt_OpenVINO_YOLOv8_Image_Classification.pro  main.cpp
CppQt_OpenVINO_YOLOv8_Image_Detection/: CMakeLists.txt  main.cpp
CppQt_OpenVINO_YOLOv8_Image_OBB/: CMakeLists.txt  main.cpp
CppQt_OpenVINO_YOLOv8_Image_Pose/: CMakeLists.txt  main.cpp
CppQt_OpenVINO_YOLOv8_Image_Segmentation/: CMakeLists.txt  CppQt_OpenVINO_YOLOv8_Image_Segmentation.pro  main.cpp
(+402 files in other folders)
